# extendr_alloc

./: .gitignore  Cargo.toml  DESCRIPTION  LICENSE  NAMESPACE  README.md  test.R
R/: lib.R
src/: Makevars  lib.rs
