[package]
name = "extendr-alloc"
version = "0.1.0"
authors = ["Roderick <rbovee@gmail.com>"]
edition = "2018"

[dependencies]
extendr-api = { package = "extendr-api", git = "https://github.com/extendr/extendr/", rev = "1d2e87ed49a3e0e5c1a1a2df58140b3f7824fb87"}
libR-sys = "0.2.2"

[lib]
name = "extendr_alloc"
crate-type = ["cdylib"]
